--- a/Index.html
+++ b/Index.html
@@ -4,55 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fantasy Horse Reality</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f0f0f0;
-        }
-        header {
-            background-color: #4a2c2a;
-            color: white;
-            text-align: center;
-            padding: 1em;
-        }
-        nav {
-            background-color: #6d4c41;
-            padding: 0.5em;
-        }
-        nav ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-            display: flex;
-            justify-content: space-around;
-        }
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            padding: 0.5em 1em;
-        }
-        nav ul li a:hover {
-            background-color: #8d6e63;
-        }
-        main {
-            padding: 2em;
-            max-width: 800px;
-            margin: 0 auto;
-            background-color: white;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
-        }
-        footer {
-            background-color: #4a2c2a;
-            color: white;
-            text-align: center;
-            padding: 1em;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -60,10 +12,10 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#stable">Stable</a></li>
-            <li><a href="#market">Market</a></li>
-            <li><a href="#messages">Messages</a></li>
-            <li><a href="#profile">Profile</a></li>
+            <li><a href="stable.html">Stable</a></li>
+            <li><a href="market.html">Market</a></li>
+            <li><a href="messages.html">Messages</a></li>
+            <li><a href="profile.html">Profile</a></li>
         </ul>
     </nav>
     <main>
