--- a/Market.html
+++ b/Market.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Market - Fantasy Horse Reality</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="market.css">
 </head>
 <body>
     <header>
@@ -21,11 +22,32 @@
     </nav>
     <main>
         <h2>Horse Market</h2>
-        <div id="market-listings">
-            <!-- Market listings will be dynamically populated here -->
+        <div class="breed-grid">
+            <div class="breed-card">
+                <img src="images/unicorn.jpg" alt="Unicorn">
+                <p>Unicorn</p>
+            </div>
+            <div class="breed-card">
+                <img src="images/pegasus.jpg" alt="Pegasus">
+                <p>Pegasus</p>
+            </div>
+            <div class="breed-card">
+                <img src="images/kelpie.jpg" alt="Kelpie">
+                <p>Kelpie</p>
+            </div>
+            <div class="breed-card">
+                <img src="images/nightmare.jpg" alt="Nightmare">
+                <p>Nightmare</p>
+            </div>
+            <div class="breed-card">
+                <img src="images/alicorn.jpg" alt="Alicorn">
+                <p>Alicorn</p>
+            </div>
+            <div class="breed-card">
+                <img src="images/hippocampus.jpg" alt="Hippocampus">
+                <p>Hippocampus</p>
+            </div>
         </div>
-        <button id="buy-btn">Buy Horse</button>
-        <button id="sell-btn">Sell Horse</button>
     </main>
     <footer>
         &copy; 2024 Fantasy Horse Reality. All rights reserved.
