--- a/stable.html
+++ b/stable.html
@@ -27,6 +27,13 @@
         <button id="breed-btn">Breed Horses</button>
         <button id="train-btn">Train Horses</button>
     </main>
+    <div id="train-modal" class="modal">
+        <div class="modal-content">
+            <h3>Select a horse to train</h3>
+            <div id="train-horse-list"></div>
+            <button id="close-modal">Close</button>
+        </div>
+    </div>
     <footer>
         &copy; 2024 Fantasy Horse Reality. All rights reserved.
     </footer>
