--- a/market.html
+++ b/market.html
@@ -24,15 +24,15 @@
         <h2>Horse Market</h2>
         <div class="breed-grid">
             <div class="breed-card">
-                <img src="images/unicorn.jpg" alt="Unicorn">
+                <img src="https://imgur.com/gR3N8z1" alt="Pegasus">
                 <p>Unicorn</p>
             </div>
             <div class="breed-card">
-                <img src="images/pegasus.jpg" alt="Pegasus">
+                <img src="https://imgur.com/79DuFEU" alt="Floralequin">
                 <p>Pegasus</p>
             </div>
             <div class="breed-card">
-                <img src="images/kelpie.jpg" alt="Kelpie">
+                <img src="https://imgur.com/BWdmazQ" alt="Wraithsteeds">
                 <p>Kelpie</p>
             </div>
             <div class="breed-card">
