--- a/market.html
+++ b/market.html
@@ -36,7 +36,7 @@
                 <p>Kelpie</p>
             </div>
             <div class="breed-card">
-                <img src="images/nightmare.jpg" alt="Nightmare">
+                <img src="https://imgur.com/ThhwfHp" alt="Nebulamane">
                 <p>Nightmare</p>
             </div>
             <div class="breed-card">
