--- a/market.html
+++ b/market.html
@@ -25,19 +25,19 @@
         <div class="breed-grid">
             <div class="breed-card">
                 <img src="https://imgur.com/gR3N8z1" alt="Pegasus">
-                <p>Unicorn</p>
-            </div>
-            <div class="breed-card">
-                <img src="https://imgur.com/79DuFEU" alt="Floralequin">
                 <p>Pegasus</p>
             </div>
             <div class="breed-card">
+                <img src="https://imgur.com/79DuFEU" alt="Floralequin">
+                <p>Floralquin</p>
+            </div>
+            <div class="breed-card">
                 <img src="https://imgur.com/BWdmazQ" alt="Wraithsteeds">
-                <p>Kelpie</p>
+                <p>Wraithsteeds</p>
             </div>
             <div class="breed-card">
                 <img src="https://imgur.com/ThhwfHp" alt="Nebulamane">
-                <p>Nightmare</p>
+                <p>Nebulamane</p>
             </div>
             <div class="breed-card">
                 <img src="images/alicorn.jpg" alt="Alicorn">
