--- a/market.html
+++ b/market.html
@@ -39,18 +39,10 @@
                 <img src="https://imgur.com/ThhwfHp" alt="Nebulamane">
                 <p>Nebulamane</p>
             </div>
-            <div class="breed-card">
-                <img src="images/alicorn.jpg" alt="Alicorn">
-                <p>Alicorn</p>
-            </div>
-            <div class="breed-card">
-                <img src="images/hippocampus.jpg" alt="Hippocampus">
-                <p>Hippocampus</p>
-            </div>
         </div>
     </main>
     <footer>
-        &copy; 2024 Fantasy Horse Reality. All rights reserved.
+        &copy; 2024 Celestial Herds. All rights reserved.
     </footer>
     <script src="market.js"></script>
 // winnie
