--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <p>Click on the navigation menu to explore your stable, visit the market, check your messages, or view your profile.</p>
     </main>
     <footer>
-        &copy; 2024 Fantasy Horse Reality. All rights reserved.
+        &copy; 2024 Celestial Herds. All rights reserved.
     </footer>
 </body>
 </html>
