--- a/messages.html
+++ b/messages.html
@@ -27,7 +27,7 @@
         <button id="new-message-btn">New Message</button>
     </main>
     <footer>
-        &copy; 2024 Fantasy Horse Reality. All rights reserved.
+        &copy; 2024 Celestial Herds. All rights reserved.
     </footer>
     <script src="messages.js"></script>
 </body>
