--- a/profile.html
+++ b/profile.html
@@ -27,7 +27,7 @@
         <button id="edit-profile-btn">Edit Profile</button>
     </main>
     <footer>
-        &copy; 2024 Fantasy Horse Reality. All rights reserved.
+        &copy; 2024 Celestial Herds. All rights reserved.
     </footer>
     <script src="profile.js"></script>
 </body>
