--- a/stable.html
+++ b/stable.html
@@ -35,7 +35,7 @@
         </div>
     </div>
     <footer>
-        &copy; 2024 Fantasy Horse Reality. All rights reserved.
+        &copy; 2024 Celestial Herds. All rights reserved.
     </footer>
     <script src="stable.js"></script>
 </body>
