--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Fantasy Horse Reality</h1>
+        <h1>Celestial Herds</h1>
     </header>
     <nav>
         <ul>
@@ -19,7 +19,7 @@
         </ul>
     </nav>
     <main>
-        <h2>Welcome to Fantasy Horse Reality</h2>
+        <h2>Welcome to Celestial Herds</h2>
         <p>Breed, train, and sell magical fantasy horses in this exciting online game!</p>
         <p>Click on the navigation menu to explore your stable, visit the market, check your messages, or view your profile.</p>
     </main>
