--- a/market.html
+++ b/market.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Market - Fantasy Horse Reality</title>
     <link rel="stylesheet" href="style.css">
-    
 </head>
 <body>
     <header>
@@ -24,19 +23,19 @@
         <h2>Horse Market</h2>
         <div class="breed-grid">
             <div class="breed-card">
-                <img src="https://imgur.com/gR3N8z1" alt="Pegasus">
+                <img src="https://i.imgur.com/gR3N8z1.png" alt="Pegasus">
                 <p>Pegasus</p>
             </div>
             <div class="breed-card">
-                <img src="https://imgur.com/79DuFEU" alt="Floralequin">
+                <img src="https://i.imgur.com/79DuFEU.png" alt="Floralequin">
                 <p>Floralquin</p>
             </div>
             <div class="breed-card">
-                <img src="https://imgur.com/BWdmazQ" alt="Wraithsteeds">
+                <img src="https://i.imgur.com/BWdmazQ.png" alt="Wraithsteeds">
                 <p>Wraithsteeds</p>
             </div>
             <div class="breed-card">
-                <img src="https://imgur.com/ThhwfHp" alt="Nebulamane">
+                <img src="https://i.imgur.com/ThhwfHp.png" alt="Nebulamane">
                 <p>Nebulamane</p>
             </div>
         </div>
@@ -45,7 +44,5 @@
         &copy; 2024 Celestial Herds. All rights reserved.
     </footer>
     <script src="market.js"></script>
-
-    
 </body>
 </html>
