--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@
         &copy; 2024 Celestial Herds. All rights reserved.
     </footer>
     <script src="index.js"></script>
+    <script src="header.js"></script>
 </body>
 </html>
