--- a/lore.html
+++ b/lore.html
@@ -31,5 +31,6 @@
         &copy; 2024 Fantasy Horse Reality. All rights reserved.
     </footer>
     <script src="lore.js"></script>
+    <script src="header.js"></script>
 </body>
 </html>
