--- a/profile.html
+++ b/profile.html
@@ -30,5 +30,6 @@
         &copy; 2024 Celestial Herds. All rights reserved.
     </footer>
     <script src="profile.js"></script>
+    <script src="header.js"></script>
 </body>
 </html>
