--- a/stable.html
+++ b/stable.html
@@ -38,5 +38,6 @@
         &copy; 2024 Celestial Herds. All rights reserved.
     </footer>
     <script src="stable.js"></script>
+    <script src="header.js"></script>
 </body>
 </html>
