--- a/market.html
+++ b/market.html
@@ -44,5 +44,6 @@
         &copy; 2024 Celestial Herds. All rights reserved.
     </footer>
     <script src="market.js"></script>
+    <script src="header.js"></script>
 </body>
 </html>
