--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
     </footer>
     <script src="header.js"></script>
     <script src="stable.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
