--- a/stable.html
+++ b/stable.html
@@ -14,6 +14,7 @@
             <li><a href="market.html">Market</a></li>
             <li><a href="messages.html">Messages</a></li>
             <li><a href="profile.html">Profile</a></li>
+            <li><a href="lore.html">Lore</a></li>
         </ul>
     </nav>
     <main>
