--- a/profile.html
+++ b/profile.html
@@ -14,15 +14,48 @@
             <li><a href="market.html">Market</a></li>
             <li><a href="messages.html">Messages</a></li>
             <li><a href="profile.html">Profile</a></li>
-            <li><a href="lore.html">Lore</a></li>
         </ul>
     </nav>
     <main>
         <h2>Your Profile</h2>
         <div id="user-info">
-            <!-- User information will be dynamically populated here -->
+            <p><strong>Username:</strong> <span id="username"></span></p>
+            <p><strong>Account Created:</strong> <span id="account-created"></span></p>
+            <p><strong>Favorite Horse Breed:</strong> <span id="fav-horse-breed"></span></p>
+            <p><strong>Pronouns:</strong> <span id="pronouns"></span></p>
+            <p><strong>Country:</strong> <span id="country"></span></p>
+            <p><strong>Description:</strong> <span id="description"></span></p>
         </div>
         <button id="edit-profile-btn">Edit Profile</button>
+        <div id="edit-form" style="display: none;">
+            <h3>Edit Profile</h3>
+            <form id="profile-form">
+                <label for="edit-account-created">Account Created:</label>
+                <input type="date" id="edit-account-created" required><br>
+
+                <label for="edit-fav-horse-breed">Favorite Horse Breed:</label>
+                <select id="edit-fav-horse-breed" required>
+                    <option value="">Select a breed</option>
+                    <option value="Pegasus">Pegasus</option>
+                    <option value="Unicorn">Unicorn</option>
+                    <option value="Kelpie">Kelpie</option>
+                    <option value="Sleipnir">Sleipnir</option>
+                    <!-- Add more horse breeds from your game here -->
+                </select><br>
+
+                <label for="edit-pronouns">Pronouns:</label>
+                <input type="text" id="edit-pronouns" required><br>
+
+                <label for="edit-country">Country:</label>
+                <input type="text" id="edit-country" required><br>
+
+                <label for="edit-description">Description:</label>
+                <textarea id="edit-description" rows="4" required></textarea><br>
+
+                <button type="submit">Save Changes</button>
+                <button type="button" id="cancel-edit">Cancel</button>
+            </form>
+        </div>
     </main>
     <footer>
         &copy; 2024 Celestial Herds. All rights reserved.
