--- a/lore.html
+++ b/lore.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lore - Fantasy Horse Reality</title>
+    <title>Lore - Celestial Herds</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="lore.css">
 </head>
@@ -25,7 +25,7 @@
         </div>
     </main>
     <footer>
-        &copy; 2024 Fantasy Horse Reality. All rights reserved.
+        &copy; 2024 Celestial Herds. All rights reserved.
     </footer>
     <script src="header.js"></script>
     <script src="lore.js"></script>
