--- a/market.html
+++ b/market.html
@@ -21,8 +21,8 @@
         <h2>Horse Market</h2>
         <div class="breed-grid">
             <div class="breed-card">
-                <img src="https://i.imgur.com/gR3N8z1.png" alt="Pegasus">
-                <p>Pegasus</p>
+                <img src="https://i.imgur.com/CrsXESM.png" alt="Minty Fresh">
+                <p>Minty Fresh</p>
             </div>
             <div class="breed-card">
                 <img src="https://i.imgur.com/79DuFEU.png" alt="Floralequin">
