--- a/market.html
+++ b/market.html
@@ -25,20 +25,20 @@
                 <p>Minty Fresh</p>
             </div>
             <div class="breed-card">
-                <img src="https://i.imgur.com/79DuFEU.png" alt="Floralequin">
-                <p>Floralquin</p>
+                <img src="https://i.imgur.com/Gp3xS5x.png" alt="Bon Bon">
+                <p>Bon Bon</p>
             </div>
             <div class="breed-card">
-                <img src="https://i.imgur.com/BWdmazQ.png" alt="Wraithsteeds">
-                <p>Wraithsteeds</p>
+                <img src="https://i.imgur.com/eI45ow2.png" alt="Neapolita">
+                <p>Neapolita</p>
             </div>
             <div class="breed-card">
-                <img src="https://i.imgur.com/ThhwfHp.png" alt="Nebulamane">
-                <p>Nebulamane</p>
+                <img src="https://i.imgur.com/aH4dVXr.png" alt="Seafoam">
+                <p>Seafoam</p>
             </div>
                 <div class="breed-card">
-                <img src="https://i.imgur.com/uIy4rhH.png" alt="Nocturne ">
-                <p>Nocturne</p>
+                <img src="https://i.imgur.com/K5nXwpL.png" alt="Sirius">
+                <p>Sirius</p>
         </div>
     </main>
     <footer>
