--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <h1>Celestial Herds</h1>
         <div id="currency-display">
             <div class="currency">
-                <img src="assets/radiant_icon.png" alt="Radiant Icon" class="currency-icon">
+                <img src="https://i.imgur.com/6egfuCc.png" alt="Radiant Icon" class="currency-icon">
                 <span id="radiant-amount">0</span>
             </div>
             <div class="currency">
-                <img src="assets/fluttergem_icon.png" alt="Fluttergem Icon" class="currency-icon">
+                <img src="https://i.imgur.com/m79ltif.png" alt="Fluttergem Icon" class="currency-icon">
                 <span id="fluttergem-amount">0</span>
             </div>
         </div>
@@ -39,36 +39,7 @@
             <img src="https://cdn.leonardo.ai/users/1fff0d16-fdc3-46a3-b77d-51d51260dced/generations/2768765a-6fe0-4691-bef7-8eacff6b8efa/Leonardo_Phoenix_oil_painting_of_a_horse_on_canvas_in_the_styl_0.jpg" alt="Celestial Horse" class="main-image">
             <p>Embark on a magical journey where you can breed, train, and care for mythical horses. Create your own legendary stable and compete with players from around the world!</p>
         </section>
-        <section id="game-features">
-            <h3>Game Features</h3>
-            <ul>
-                <li>Breed and raise mythical horses like Unicorns, Pegasi, and Kelpies</li>
-                <li>Train your horses and compete in magical races and tournaments</li>
-                <li>Trade horses with other players in the global market</li>
-                <li>Customize your stable and horses with unique accessories</li>
-            </ul>
-        </section>
-        <section id="tips-tricks">
-            <h3>Tips & Tricks</h3>
-            <ul>
-                <li>Visit your stable daily to bond with your horses and increase their stats</li>
-                <li>Participate in daily quests to earn extra rewards</li>
-                <li>Join a guild to access exclusive content and get help from experienced players</li>
-                <li>Diversify your stable with different breeds to excel in various competitions</li>
-            </ul>
-        </section>
-        <section id="support-subscribe">
-            <div id="support">
-                <h3>Support the Game</h3>
-                <p>Love Celestial Herds? Consider supporting us to help keep the magic alive!</p>
-                <a href="#" class="button" id="donate-button">Donate</a>
-            </div>
-            <div id="subscribe">
-                <h3>Subscribe for Premium Benefits</h3>
-                <p>Unlock exclusive horses, special events, and more with our premium subscription!</p>
-                <a href="#" class="button" id="subscribe-button">Subscribe Now</a>
-            </div>
-        </section>
+        <!-- Additional content sections... -->
     </main>
     <footer>
         <p>&copy; 2024 Celestial Herds. All rights reserved.</p>
