--- a/index.html
+++ b/index.html
@@ -48,3 +48,13 @@
     <script src="index.js" type="module"></script>
 </body>
 </html>
+
+<style>
+.currency-icon {
+    width: 24px; /* Set a fixed width */
+    height: 24px; /* Set a fixed height to match width */
+    object-fit: contain; /* Ensure the image fits within the dimensions */
+    vertical-align: middle; /* Align with text */
+    margin-right: 5px; /* Space between icon and text */
+}
+</style>
